# MochiSoft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hdd.img
docs/: Interrupt_talble.md  Mkernel.drawio  filesystem.md  paging.drawio  proj_layout.md  syscalls.md
src/: build_kernel.sh
src/UART-driver/: docs.md  uart-driver.cpp
src/kernel/: CMakeLists.txt  kernel.c  kernel.cpp  terminal.c
src/kernel/arch/i386/: PIC-8259.c  boot.s  gdt.c  gdt.cpp  i386_io.cpp  idt.c  idt.cpp  inb.cpp  linker.ld  microcode.c  microcode.cpp  outb.cpp  pagetable.c  tty.c  tty.cpp  uart.c  uart.cpp
src/kernel/arch/i386/8253/: PIT.c
src/kernel/arch/i386/8259/: PIC-8259.c
src/kernel/include/arch/i386/: registers.h
src/kernel/include/dev/: RTC.h  bus_interface.h
src/kernel/include/dev/8253/: PIT.h
src/kernel/include/dev/PCI/: AHCI.h  PCI.h
src/kernel/include/kernel/: PIC-8259.h  core.h  exceptions.h  gdt.h  idt.h  interrupt.h  kglobals.h  kheap.h  kstdio.h  ktime.h  logging.h  memory.h  microcode.h  proc.h  syscall.h  threads.h  tty.h  uart.h
src/kernel/include/kernel/fs/: fs.h  fs_internal.h
src/kernel/include/kernel/fs/ext2/: defs.h  ext2.h
src/kernel/include/kernel/modules/: tty.h
src/kernel/include/linked_list/: list.h
src/kernel/kernel/: core.cpp  exceptions.c  exceptions.cpp  kernel.c  kernel.cpp  kglobals.c  kstdio.c  kstdio.cpp  setup_interrupts.cpp
src/kernel/kernel/ISR/: IRQ_wrapper.s  exc_isr_wrapper.s  isr_wrapper.s  syscall_0x80.c  system_calls.s
src/kernel/kernel/ISR/IRQ_handlers/: irq0.c  irq11.c  irq4.c  irq8.c
src/kernel/kernel/dev/: AHCI.c  PCI.c  RTC.c  init_devs.c
src/kernel/kernel/dev/8253/: PIT.c
src/kernel/kernel/fs/: fs_internal.c  fs_open_file.c
src/kernel/kernel/fs/ext2/: ext2.c
src/kernel/kernel/memory/: page_allocator.c  paging.c  waterMarkAllocator.c
src/kernel/kernel/modules/: tty.c
src/kernel/kernel/proc/: proc_exit.c  proc_get.c  proc_mem_init.c  proc_register.c  proc_start.c  sched_callback.c  sched_init.c  sched_isr.s  sched_proc_exit.c  sys_create_process.c
src/kernel/kernel/syscall/: sys_read.c  sys_time.c  sys_write.c  time.c
src/kernel/linked_list/: list.c  list_iterator.c  list_node.c
src/libc/: CMakeLists.txt
src/libc/include/: stdio.h  string.h  time.h
src/libc/stdio/: _va_snprintf.c  memcpy.c  printf.c  snprintf.c  sprintf.c
src/libc/string/: bytetohex.c  i32tobin.c  i32tohex.c  isspace.c  itoa.c  ltrim.c  rtrim.c  strcmp.c  strcpy.c  strfind.c  trim.c
src/libc/time/: asctime.c  gmtime.c  mktime.c  time.c
src/utils/: string.cpp
utils/: mount-qemu-hdd.sh  umount-qemu-hdd.sh
